# smartpropt

./: .env.example  README.md  middleware.ts  next.config.js  organization-map.json  package-lock.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
.devcontainer/: devcontainer.json
admin-desktop/: .gitignore  INTEGRATION.md  README.md  package.json  tsconfig.json
admin-desktop/src/: tauri-auth.ts
admin-desktop/src-tauri/: Cargo.toml  tauri.conf.json
admin-desktop/src-tauri/src/: main.rs
app/: layout.tsx  page.tsx  providers.tsx
app/admin/: AdminUserRow.tsx  page.tsx
app/api/optimize/: route.ts
app/api/verify-nft/: route.ts
app/dashboard/: layout.tsx  page.tsx
app/login/: page.tsx
app/mint/: MintPageClient.tsx  page.tsx
app/pricing/: page.tsx
components/: AdminActions.tsx  MintNFT.tsx  NFTVerification.tsx  WalletButton.tsx
config/: chains.ts  rainbowkit.ts  wagmi.ts
contracts/: .gitignore  README.md  foundry.toml
contracts/nft/: SmartPromtsLifetimePass.sol
docs/: README.md  admin-desktop.md  api.md  architecture.md  deployment.md  developer.md  marketing-plan.md  repo-classification.md  repository-audit-report.md  security.md
lib/: auth.ts  nft.ts  openai.ts  rate-limit.ts  require-admin.ts  stripe.ts  supabase-client.ts  supabase.ts  usage.ts
lib/contracts/: SmartPromtsLifetimePass.ts
scripts/: auto-config.sh  setup-atomic-usage.sql
src/services/ai/: fallback.ts  index.ts  (+4 more)
tests/: README.md
tests/unit/: decrement-usage.test.ts  fallback.test.ts  model-router.test.ts  rate-limiter.test.ts  token-tracker.test.ts
(+7 files in other folders)
