[package]
name = "smartpromts-admin"
version = "0.1.0"
description = "SmartPromts Admin Desktop App"
authors = ["SmartPromts Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = ["system-tray"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "window-all", "shell-open", "system-tray"] }
tauri-plugin-store = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
